# mtik-dns

./: LICENSE  README.md  pyproject.toml
mtikdns/: __main__.py
