[tool.poetry]
name = "mtikdns"
version = "0.1.0"
description = ""
authors = ["Michaela <git@michaela.lgbt>"]

[tool.poetry.dependencies]
python = "^3.9"
dnslib = "^0.9.14"
RouterOS-api = "^0.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
